# ZopplerGISDisplay

./: CMakeLists.txt  ControlFactory.qml  CoordinateConverter.cpp  CoordinateConverter.h  DemoApp.cpp  GPS_README.md  MainView.qml  MainView_qml.cpp  Makefile  MovableControl.qml  PROJECT_SUMMARY.md  README.md  RICH_UI_README.md  RadarDisplay.pro  RadarDisplay.pro.user.3a9e8ac  RadarDisplay.pro.user.4.10-pre1  RichMainView.qml  RichUIDemo.pro  TrackTable.qml  build.sh  cdatawarehouse.cpp  cdatawarehouse.h  cgpsudpreceiver.cpp  cgpsudpreceiver.h  cmapmainwindow.cpp  cmapmainwindow.h  cmapmainwindow.ui  cudpreceiver.cpp  cudpreceiver.h  globalmacros.h  globalstructs.h  gps_test_sender.py  main.cpp  matrix.cpp  matrix.h  myRes.qrc  myRes_qmlcache.qrc  qmlcache_loader.cpp  simple_gps_demo.cpp  simple_gps_demo_basic  (+2 more)
MapDisplay/: TestQuickUI.qml  TestQuickUIForm.ui.qml  TestQuickUIForm.ui.qml.autosave  cgismapcontroller.cpp  cgismapcontroller.h  cmapcanvas.cpp  cmapcanvas.h  cmapdisplay.cpp  cmapdisplay.h  cmapdisplay.ui  cppilayer.cpp  cppilayer.h  csearchbeamlayer.cpp  csearchbeamlayer.h  ctracklayer.cpp  ctracklayer.h  customgradiantfillsymbollayer.cpp  customgradiantfillsymbollayer.h
